bk_ida/gobmkida/g3/do_owl_attack
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_owl_attack/src/engine/owl.c:2249:39: error: use of undeclared identifier 'unk_4B4F8D'
shape_moves[0].name = ( const char *)&unk_4B4F8D; 
                                      ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_owl_attack/src/obj/1/owl.o] Error 1
